CHANGES IN R VERSION 0.5.0.9001:
  BUG FIXES:

    * Fixed an error with error message that is "invalid multibyte string at" 
      in launch() when excute in MS-Windows 10. (thanks @statkclee, #1)

  MAJOR CHANGES:
    
    * 
      
  MINOR CHANGES:
    
    * The engine for i18n was changed from the shiny.i18n package to a 
      self-developed function. The reason is that an error occurred in the 
      logic for converting Hangul messages in MS-Windows.
    
    
      
CHANGES IN R VERSION 0.5.0.9000:
  FUCTION LIST:

    * Prepare data menu 
      - Import data
        . CSV(TSV) files
        . Excel files
        . R data files
      - Manage data
        . Overview dataset
        . Edit dataset information
        . Download datasets
        . Export all datasets and meta data
      
    * Diagnose data
      - Overview of data diagnosis
      - Overview variables
      - Overview outlers
      - Reporting
        . PDF
        . html
      
    * Transform data
      - Manipulate variables
        . Rename variables
        . Change data type
        . Remove variables
        . Reorder levels
        . Reorganize levels
        . Transform
        . Bin
      
  FEATURE LIST:      
    * Support multi language
      - Korean
      - English