@@ -13,6 +13,9 @@ CHANGES IN R VERSION 0.5.0.9001:
     * The engine for i18n was changed from the shiny.i18n package to a 
       self-developed function. The reason is that an error occurred in the 
       logic for converting Hangul messages in MS-Windows.
+    * The xlsx package was replaced with the openxlsx package for handling 
+      excel files. This is because the openxlsx package is a package that 
+      does not require JAVA.  
     
     
       
